--- a/mediaQuerry.css
+++ b/mediaQuerry.css
@@ -100,7 +100,8 @@
     main{
         flex-direction: column;
         margin-left: 0px;
-
+        margin-top: 0px;
+        padding-top: 0px;
     }
     h2{
         font-size: 16px;
@@ -129,6 +130,8 @@
     .esquerda{
         border-radius: 0px 0px 30px 30px;
         width: 100vw;
+        margin-top: 0px;
+        padding-top: 0px;
     }
     .vitrine{
         width: 150px;
@@ -143,7 +146,6 @@
         font-size: 14px;
     }
     .attribution{
-        margin-top: 260px;
     }
     .sumario{
         font-size: 1.3em;
