--- a/mediaQuerry.css
+++ b/mediaQuerry.css
@@ -97,6 +97,10 @@
     }
 }
 @media (max-width:375px){
+    body{
+        margin:0px;
+        padding:0px;
+    }
     main{
         flex-direction: column;
         margin-left: 0px;
